will run in firefox

--- a/project/cashcompass/frontend/public/index.html
+++ b/project/cashcompass/frontend/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-128.png" sizes="128x128" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#3498db" />
+    <meta name="msapplication-navbutton-color" content="#3498db" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="msapplication-TileColor" content="#3498db" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="description"
       content="Your ultimate finance tracker - CashCompass"
